/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";

package any_example_pb;

import "google/protobuf/any.proto";

message AnyInner {
  option (fory).id = 300;
  string name = 1;
}

message AnyUnion {
  option (fory).id = 301;
  oneof kind {
    string text = 1;
    bool flag = 2;
    AnyInner inner = 3;
  }
}

message AnyHolder {
  option (fory).id = 302;
  google.protobuf.Any bool_value = 1;
  google.protobuf.Any string_value = 2;
  google.protobuf.Any date_value = 3;
  google.protobuf.Any timestamp_value = 4;
  google.protobuf.Any message_value = 5;
  google.protobuf.Any union_value = 6;
  google.protobuf.Any list_value = 7;
  google.protobuf.Any map_value = 8;
}
